--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,22 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: "Poppins", san;
+    font-weight: 700;
+    font-style: normal;
+    background-color: #050505;
+    color: #000
+}
 header,
-.inicio,
-.cabecalho{
+.container{
     display: flex;
-    justify-items: space-between;
+}
+header{
+    padding: 1rem;
+}
+.container{
+    background-color: #fff;
+    justify-content: space-between;
+    width: 100%;
 }
