--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,12 +29,12 @@ p{
     font-family: "DM Sans", sans-serif;
 }
 .direita{
-    height: .1rem;
+    height: .05rem;
     width: 100%;
     background: linear-gradient(90deg, rgba(204, 244, 230, 0.34) 0%, rgba(105, 185, 157, 1) 100%);
 }
 .esquerda{
-    height: .1rem;
+    height: .06rem;
     width: 100%;
     background: linear-gradient(90deg, rgba(105, 185, 157, 1) 0%,  rgba(204, 244, 230, 0.34) 100%);
 }
@@ -156,6 +156,7 @@ section .quadrados .quadrado{
 }
 section .quadrados{
     justify-items: center;
+    margin-bottom: 5rem;
 }
 section .quadrados .quadrado .icon{
     font-size: 5rem;
@@ -166,9 +167,38 @@ section .quadrados .quadrado p{
     color: #767676;
     margin: 0 2rem 0 2rem;
 }
+section.depoimentos{
+    justify-items: center;
+}
 section .feedback{
-    margin-top: 4rem;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+    justify-content: center;
+    text-align: left;
     width: 20rem;
     height: auto;
 }
-
+section  .feedback h1{
+    font-size: calc(1rem + 3.8vw);
+}
+section .swiper .card{
+    width: 21rem;
+    height: 19rem;
+    margin-bottom: 1rem;
+    justify-items: center;
+    text-align: left;
+    padding-top: 2rem;
+    box-shadow: 0 0 .3rem rgba(0, 0, 0, 0.15);
+    border-radius: .3rem;
+}
+section .swiper .card p{
+    width: 18rem;
+    font-size: calc(.9rem + .5vw);
+}
+section .swiper .card p span{
+    color: #69b99d;
+    font-size: calc(3rem + .5vw);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-right: 0.3rem;
+    vertical-align: -1rem;
+}
